--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -15,7 +15,8 @@
 }
 
 body {
-  color: var(--foreground);
+  color: white;
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
+
 }
